--- a/css/color/green.css
+++ b/css/color/green.css
@@ -1,9 +1,9 @@
 .text-primary {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 a {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 a:hover,
@@ -15,8 +15,8 @@ a.active {
 }
 
 .btn-primary {
-    border-color: #5BB12F;
-    background-color: #5BB12F;
+    border-color: #00a1fc;
+    background-color: #00a1fc;
 }
 
 .btn-primary:hover,
@@ -42,17 +42,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #5BB12F;
-    background-color: #5BB12F;
+    border-color: #00a1fc;
+    background-color: #00a1fc;
 }
 
 .btn-primary .badge {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .btn-xl {
-    border-color: #5BB12F;
-    background-color: #5BB12F;
+    border-color: #00a1fc;
+    background-color: #00a1fc;
 }
 
 .btn-xl:hover,
@@ -79,206 +79,206 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #5BB12F;
-    background-color: #5BB12F;
+    border-color: #00a1fc;
+    background-color: #00a1fc;
 }
 
 .btn-xl .badge {
-    color: #5BB12F;
+    color: #00a1fc;
     background-color: #fff;
 }
 
 
 .navbar-default .navbar-brand {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #5BB12F;
-    background-color: #5BB12F;
+    border-color: #00a1fc;
+    background-color: #00a1fc;
 }
 
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #5BB12F;
+    background-color: #00a1fc;
 }
 
 .navbar-default .navbar-nav>.active>a {
-    background-color: #5BB12F;
+    background-color: #00a1fc;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-    background-color: #5BB12F;
+    background-color: #00a1fc;
 }
 
 .menu-wrap a:hover,
 .menu-wrap a:focus {
-	color: #5BB12F;
+	color: #00a1fc;
 }
 
 .menu-wrap .logo {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .menu-button {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .header .intro-text h1 span {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .main-title strong {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .feature i {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .no-touch .feature:hover i,
 	.no-touch .feature:active i,
 	.no-touch .feature:focus i {
         
-        box-shadow: 0 0 0 0 #5BB12F;
+        box-shadow: 0 0 0 0 #00a1fc;
 }
 
 .feature-2 i {
-    background: #5BB12F;
-    border: 1px solid #5BB12F;
+    background: #00a1fc;
+    border: 1px solid #00a1fc;
 }
 
 .feature-2:hover i {
     background: transparent;
-    color: #5BB12F;
+    color: #00a1fc;
 }
 .feature-2:hover .border {
-    border-color: #5BB12F;
+    border-color: #00a1fc;
 }
 
 .feature-3 i {
-    color: #5BB12F;
-    border: 1px solid #5BB12F;
+    color: #00a1fc;
+    border: 1px solid #00a1fc;
 }
 
 .feature-3:hover i {
-    background: #5BB12F;
+    background: #00a1fc;
     color: #fff;
 }
 
 .feature-3:hover .border {
-    border-color: #5BB12F;
+    border-color: #00a1fc;
 }
 
 .portfolio-caption a i {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 .portfolio-item:hover .portfolio-caption {
-    background-color: rgba(91, 177, 47, 0.8);
+    background-color: rgb(0, 161, 252);
 }
 
 .welcome-section:hover .border {
-    border-color: #5BB12F;
+    border-color: #00a1fc;
 }
 
 .welcome-section:hover h4 {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .about-text li i {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .about-us-section-2 .carousel-indicators li,
 .project-image .carousel-indicators li {
-	border: 2px solid #5BB12F !important;
+	border: 2px solid #00a1fc !important;
 }
 
 .about-us-section-2 .carousel-indicators .active,
 .project-image .carousel-indicators .active {
-	background-color: #5BB12F;
+	background-color: #00a1fc;
 }
 
 .owl-theme .owl-controls .owl-buttons div {
-	background: #5BB12F;
+	background: #00a1fc;
 }
 
 #team-section .nav-tabs.nav-justified {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .team-member .team-details {
-    background-color: rgba(91, 177, 47, 0.8);
+    background-color: rgb(0, 161, 252);
 }
 
 .counter-item i {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 .timer {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 .latest-post h4 {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 .latest-post .post-details li i {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .testimonials .testimonial-content img {
-    border: 3px solid #5BB12F;
+    border: 3px solid #00a1fc;
 }
 .testimonials .testimonial-author .author {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 .testimonials-carousel .owl-controls.clickable .owl-buttons div{
-	color: #5BB12F;
+	color: #00a1fc;
 }
 .owl-theme .owl-controls .owl-page.active{
-    background-color: #5BB12F;
+    background-color: #00a1fc;
 }
 
 .contact .form-control:focus {
-    border-color: #5BB12F;
+    border-color: #00a1fc;
     box-shadow: none;
 }
 
 footer.style-1 .footer-social li a {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .call-to-action h1 strong {
-    color: #5BB12F;   
+    color: #00a1fc;   
 }
 
 .team-details li a {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .progress-bar {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 
 .pricing-tables .pricing-table.highlight-plan .plan-name {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .pricing-tables .pricing-table.highlight-plan .plan-signup {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .footer-contact-info {
@@ -286,29 +286,29 @@ footer.style-1 .footer-social li a {
 }
 
 footer.style-1 {
-    border-top: 2px solid #5BB12F;
+    border-top: 2px solid #00a1fc;
 }
 
 #main-slide .slider-content h1 strong {
-    color: #5BB12F;
+    color: #00a1fc;
 }
 
 .latest-post .post-details .date {
-    background: rgba(91, 177, 47, 0.8);
+    background: rgb(0, 161, 252);
 }
 
 .custom-tab .nav-tabs.nav-justified {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .plan-name {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .plan-signup {
-    background: #5BB12F;
+    background: #00a1fc;
 }
 
 .dot1, .dot2 {
-    background-color: #5BB12F;
+    background-color: #00a1fc;
 }
